--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@mastergo/plugin-typings": "^2.2.0",
+    "@types/react-color": "^3.0.13",
     "antd": "^5.26.7",
     "mg-jsonrpc": "^1.0.3",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
